# hw3-odsogunro

./: .gitignore  LICENSE  Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
ligotools/: readligo.py  utils.py
ligotools/tests/: test_readligo.py  test_utils.py
