[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
    {name="Ligo Scientific Collaboration (LSC)", email="tbd@ligo.org"},
    {name="Olorundamilola 'Dami' Kazeem", email="dami@berkeley.edu"},
]
description = "Homework 03 - From Notebooks to Research Packages, Part II"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "numpy==2.0",
    "scipy==1.13",
    "h5py==3.12",
    "matplotlib==3.9",
    "ipykernel==6.29",
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["homework","notebooks", "research", "packages"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-odsogunro"
# Pull_Requests = "https://github.com/UCB-stat-159-f25/hw3-odsogunro/pulls"

[tool.setuptools]
packages = ["ligotools"]

# [tool.setuptools.dynamic]
# version = {attr = "ligotools.__version__"}
